--- a/index.html
+++ b/index.html
@@ -11,30 +11,31 @@
 <body>
     <div class="title"><h1>Calculator</h1></div>
     <div class="container">
-        <div class="display"></div>
-        <div class="controls">
-            <button class="clear">c</button>
-            <button class="toggle">+/-</button>
-            <button class="percent">%</button>
-            <button class="add">+</button>
-            <button class="subtract">-</button>
-            <button class="multiply">*</button>
-            <button class="divide">/</button>
-            <button class="equals">=</button>
+        <div class="display">
+            <span id="VO">212121212</span>
         </div>
-        <div class="numbers">
-            <button class="one">1</button>
-            <button class="two">2</button>
-            <button class="three">3</button>
-            <button class="four">4</button>
-            <button class="five">5</button>
-            <button class="six">6</button>
-            <button class="seven">7</button>
-            <button class="eight">8</button>
-            <button class="nine">9</button>
-            <button class="zero">0</button>
+            <div class="controls">
+                <button class="clear">c</button>
+                <button class="toggle">+/-</button>
+                <button class="percent">%</button>
+                <button class="divide">/</button>
+                <button class="seven">7</button>
+                <button class="eight">8</button>
+                <button class="nine">9</button>
+                <button class="multiply">*</button>
+                <button class="four">4</button>
+                <button class="five">5</button>
+                <button class="six">6</button>
+                <button class="subtract">-</button>
+                <button class="one">1</button>
+                <button class="two">2</button>
+                <button class="three">3</button>
+                <button class="add">+</button>
+                <button class="zero">0</button>
+                <button class="decimal">.</button>
+                <button class="equals">=</button>
+            </div>
         </div>
-    </div>
 
 <script src="app.js"></script>
 </body>
