font update to helvetica

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="title"><h1>Calculator</h1></div>
     <div class="container">
         <div class="display">
-            <span id="VO">212121212</span>
+            <span id="VO">0</span>
         </div>
             <div class="controls">
-                <button class="clear">c</button>
+                <button class="clear">C</button>
                 <button class="toggle">+/-</button>
                 <button class="percent">%</button>
                 <button class="divide">/</button>
