--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
             <span id="VO">0</span>
         </div>
             <div class="controls">
-                <button class="clear">C</button>
-                <button class="toggle">+/-</button>
-                <button class="percent">%</button>
-                <button class="divide">/</button>
+                <button class="clear" data-action="clear">AC</button>
+                <button class="toggle" data-action="plusminus">+/-</button>
+                <button class="percent" data-action="percentage">%</button>
+                <button class="divide" data-action="divide">/</button>
                 <button class="seven">7</button>
                 <button class="eight">8</button>
                 <button class="nine">9</button>
-                <button class="multiply">*</button>
+                <button class="multiply" data-action="multiply">*</button>
                 <button class="four">4</button>
                 <button class="five">5</button>
                 <button class="six">6</button>
-                <button class="subtract">-</button>
+                <button class="subtract" data-action="subtract">-</button>
                 <button class="one">1</button>
                 <button class="two">2</button>
                 <button class="three">3</button>
-                <button class="add">+</button>
+                <button class="add" data-action="add">+</button>
                 <button class="zero">0</button>
-                <button class="decimal">.</button>
-                <button class="equals">=</button>
+                <button class="decimal" data-action="decimal">.</button>
+                <button class="equals" data-action="calculate">=</button>
             </div>
         </div>
 
